# cpprpc

./: .gitmodules  CMakeLists.txt  spec.json
cpprpc/: CMakeLists.txt  Exception.hpp  RpcError.cpp  RpcError.hpp  utils.hpp
cpprpc/client/: BaseClient.cpp  BaseClient.hpp
cpprpc/server/: BaseServer.cpp  BaseServer.hpp  NotifyProcedure.cpp  NotifyProcedure.hpp  Procedure.cpp  Procedure.hpp  ReturnProcedure.cpp  ReturnProcedure.hpp  RpcServer.cpp  RpcServer.hpp  RpcService.cpp  RpcService.hpp
cpprpc/stub/: CMakeLists.txt  ClientStubGenerator.cpp  ClientStubGenerator.hpp  ServiceStubGenerator.cpp  ServiceStubGenerator.hpp  StubGenerator.cpp  StubGenerator.hpp  main.cpp
src/: CMakeLists.txt  Exception.hpp  RpcError.cpp
test/: CMakeLists.txt  test1.cpp  testException.cpp  testRpcError.cpp
test/add/: ArithmeticClient.cpp  ArithmeticClientStub.hpp  ArithmeticService.cpp  ArithmeticServiceStub.hpp  CMakeLists.txt  spec.json
test/echo/: CMakeLists.txt  EchoClient.cpp  EchoClientStub.hpp  EchoService.cpp  EchoServiceStub.hpp
test/notify/: CMakeLists.txt  notifyClient.cpp  notifyClientStub.hpp  notifyService.cpp  notifyServiceStub.hpp  spec.json
